2017-08-09  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r219334.
        https://bugs.webkit.org/show_bug.cgi?id=175398

        Caused bug 175023 (Requested by ap on #webkit).

        Reverted changeset:

        "[SVG] Leak in SVGAnimatedListPropertyTearOff"
        https://bugs.webkit.org/show_bug.cgi?id=172545
        http://trac.webkit.org/changeset/219334

2017-08-09  Kirill Ovchinnikov  <kirill.ovchinnikov@lge.com>

        Old subtitle track is not deleted on 'src' attribute change event
        https://bugs.webkit.org/show_bug.cgi?id=175031

        Reviewed by Eric Carlson.

        * media/track/text-track-src-change-expected.txt: Added.
        * media/track/text-track-src-change.html: Added.

2017-08-09  Ms2ger  <Ms2ger@igalia.com>

        [GTK] [WPE] Update expectations for global-constructors-attributes.html.
        https://bugs.webkit.org/show_bug.cgi?id=175373

        Unreviewed test gardening.

        * platform/gtk/js/dom/global-constructors-attributes-expected.txt:
        * platform/wpe/js/dom/global-constructors-attributes-expected.txt:

2017-08-08  Wenson Hsieh  <wenson_hsieh@apple.com>

        Unreviewed, rolling out r220393.

        This patch regresses the performance of WebPage::editorState.

        Reverted changeset:

        "[iOS WK2] WKWebView schedules nonstop layout after pressing
        cmb+b,i,u inside a contenteditable div"
        https://bugs.webkit.org/show_bug.cgi?id=175116
        http://trac.webkit.org/changeset/220393

2017-08-08  Chris Dumez  <cdumez@apple.com>

        [Beacon] Add support for CORS-preflighting for WK2 / NETWORK_SESSION
        https://bugs.webkit.org/show_bug.cgi?id=175264
        <rdar://problem/33547793>

        Reviewed by Youenn Fablet.

        Add layout test coverage.

        * http/wpt/beacon/cors/cors-preflight-arraybufferview-failure-expected.txt: Added.
        * http/wpt/beacon/cors/cors-preflight-arraybufferview-failure.html: Added.