@@ -1,3 +1,15 @@
+2017-08-09  Nan Wang  <n_wang@apple.com>
+
+        LayoutTest accessibility/presentation-role-iframe.html is a flaky failure
+        https://bugs.webkit.org/show_bug.cgi?id=175194
+
+        Reviewed by Chris Fleizach.
+
+        In the test we have no way to control which iframe will be loaded first.
+        Output the logs at the end of the test so that they are in order.
+
+        * accessibility/presentation-role-iframe.html:
+
 2017-08-09  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, rolling out r219334.
